--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "path": "^0.12.7",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
