--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "aux": "0.0.6",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "mailgun-js": "^0.20.0",
     "path": "^0.12.7",
     "react-aux": "^1.1.0",
     "react-background-slideshow": "^1.0.3",
     "react-router-dom": "^4.3.1",
-    "react-slideshow-image": "^0.2.2"
+    "react-slideshow-image": "^0.2.2",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.5",
+    "styled-components": "^3.4.6",
+    "styled-form-component": "^2.0.0",
+    "styled-system": "^3.1.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
