--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "aux": "0.0.6",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "mailgun-js": "^0.20.0",
+    "nodemailer": "^4.6.8",
     "path": "^0.12.7",
+    "react": "^16.5.1",
     "react-aux": "^1.1.0",
     "react-background-slideshow": "^1.0.3",
+    "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
     "react-slideshow-image": "^0.2.2",
+    "reactstrap": "^6.4.0",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.5",
     "styled-components": "^3.4.6",
